<resources>
    <string name="app_billing_public_key">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEA9YcCw3AsYrwRBY6RqLNwZLran5NHTlgvhUcBoUiIw0vhbumsapI4mwPThN2IP0OUHol1ACh/QLbrD15bISvJvdpoh+p+LqGsZPdFRKOSmngPD2ta+oNdXY82ejsY2Xgk6TlOtM2mkP5lub07uGdDJLZRrQ+/u+cpPyWMvDgDpVtmWS5SCCW0Tiq+Q4rdAgv70FesapZgSn7g6ccncSFzD59eOhN9GlqSXHMR8ABsRVp2QR6kWcFhTM29iXLRnnGuIa6Q9ZBZdySlkXZQWbln8WyAhWPiM1RgWdoMKgyoU6HyACeIFW3u3K3DIkCLY9cdAmMsxXLNncWG0MxGeXIxrQIDAQAB</string>
    <string name="app_name">Cyclops</string>
    <string name="info_text">i</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_server">Servers</string>
    <string name="title_devices">Devices</string>
    <string name="title_profile">Dashboard</string>
    <string name="title_users">Users</string>
    <string name="MobiControl">MobiControl</string>
    <string name="api_secret_hint">Api secret</string>
    <string name="client_id_hint">Client ID</string>
    <string name="server_address_hint">Server address</string>
    <string name="password_hint">Password</string>
    <string name="user_name_hint">User name</string>
    <string name="logIn_label">LogIn</string>
    <string name="test_connection_label">Test connection</string>
    <string name="account_type">MobiControlAccount</string>
    <string name="download_devices_action">com.mdmobile.cyclops.DOWNLOAD_DEVICES</string>
    <string name="search_label">Search..</string>
    <string name="search_view_hint">device name, id or group</string>
    <string name="title_activity_device_details">DeviceDetailsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="device_info_view_label">Device Info</string>
    <string name="details_profiles_view_label">Profiles</string>
    <string name="details_installed_apps_view_label">Installed Apps</string>
    <string name="info_operating_system_label">Operating System</string>
    <string name="info_last_agent_check_in_label">Last Agent Check-in</string>
    <string name="info_hostname_label">HostName</string>
    <string name="pin_folder_menu_label">Pin folder</string>
    <string name="sort_devices_menu_label">Sort devices by …</string>
    <string name="devices_menu_filter_label">Filter</string>
    <string name="sort_device_a_z">Device name (A-Z)</string>
    <string name="sort_device_z_a">Device name (Z-A)</string>
    <string name="sort_device_online_first">Devices online first</string>
    <string name="sort_device_offline_first">Devices offline first</string>
    <string name="refresh_token">Refresh Token</string>
    <string name="invalidate_token">invalidate token</string>
    <string name="sync_now">Sync now …</string>
    <string name="dialog_cancel_label">Cancel</string>
    <string name="dialog_apply_label">Apply</string>
    <string name="last_synced">1 min ago</string>
    <string name="pin_a_folder_dialog_title">Pin a folder to main screen</string>
    <string name="pin_folder_dialog_subtitle">Only devices belonging to this folder will be displayed</string>
    <string name="folder_path_hint">Folder Path</string>
    <string name="device_count_chart_description">Devices enrolled</string>
    <string name="no_data_found_chart">No Data available!!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="show_more_info_menu_label">Show more info</string>
    <string name="uninstall_app_dialog_title">Uninstall application</string>
    <string name="uninstall_app_dialog_description">Are you sure you want to uninstall \"%1$s\" ?</string>
    <string name="do_not_ask_again_label">Do not ask again</string>
    <string name="uninstall_app_confirm_disabled_pref">uninstall_app_dialog_showing_pref</string>
    <string name="uninstall_label">Uninstall</string>
    <string name="locate_label">Locate</string>
    <string name="checkin_label">CheckIn</string>
    <string name="script_label">Send script</string>
    <string name="message_label">Send message</string>
    <string name="script_edit_text_hint">Type your script here…</string>
    <string name="send_script_dialog_title">Send Script</string>
    <string name="send_message_dialog_title">Send a message</string>
    <string name="script_dialog_description">Requires platform that support scripting.</string>
    <string name="dialog_send_button_label">Send</string>
    <string name="message_dialog_description">Requires the presence of MobiControl agent</string>
    <string name="message_edit_text_hint">Type the message here…</string>
    <string name="spinner_hint_label">Select a script…</string>
    <string name="details_fragment_tag">detailsFragmentStringTag</string>
    <string name="offline_chart_label">Online vs Offline</string>
    <string name="platform_chart_label">Platforms</string>
    <string name="deployment_servers_label">Deployment Servers</string>
    <string name="management_servers_label">Management Servers</string>
    <string name="server_ini_file_name">ServerSetup.xml</string>
    <string name="title_activity_service_details">ServiceDetailsActivity</string>
    <string name="add_chart_label">Add chart</string>
    <string name="more_label">more</string>
    <string name="logout_label">Logout</string>
    <string name="notification_channel_name">MDM Alerts</string>
    <string name="notification_channel_description">Get notified when MDM services are not reachable</string>
    <string name="notification_server_status_title">Alert: Server status changed</string>
    <string name="server_offline">%1$s status: Offline</string>
    <string name="server_stopped">%1$s status: Stopped</string>
    <string name="server_online">%1$s status: Online</string>
    <string name="server_unlicensed">%1$s status: Unlicensed</string>
    <string name="server_disabled">%1$s status: Disabled</string>
    <string name="server_started_but_not_registered">%1$s status: Started but not registered</string>
    <string name="server_deleted">%1$s status: Deleted</string>
    <string name="server_unknown">%1$s status: Unknown</string>
    <string-array name="sorting_options_radio_labels">
        <item>@string/sort_device_a_z</item>
        <item>@string/sort_device_z_a</item>
        <item>@string/sort_device_online_first</item>
        <item>@string/sort_device_offline_first</item>
    </string-array>
    <string-array name="server_notification_labels">
        <item>@string/server_stopped</item>
        <item>@string/server_online</item>
        <item>@string/server_disabled</item>
        <item>@string/server_unlicensed</item>
        <item>@string/server_deleted</item>
        <item>@string/server_started_but_not_registered</item>
        <item>@string/server_offline</item>
        <item>@string/server_unknown</item>
    </string-array>
    <string-array name="last_sync_labels">
        <item>@string/last_sync_now_label</item>
        <item>@string/last_sync_min_label</item>
        <item>@string/last_sync_hour_label</item>
        <item>@string/last_sync_days_label</item>
        <item>@string/last_sync_unknown</item>
    </string-array>
    <string name="last_sync_now_label">Just now!</string>
    <string name="last_sync_min_label">%1$dm ago</string>
    <string name="last_sync_hour_label">%1$dh ago</string>
    <string name="last_sync_days_label">%1$dd ago</string>
    <string name="last_sync_unknown">Unknown</string>
    <string name="general_shared_preference">CyclopesGeneralPref</string>
    <string name="user_shared_preference">CyclopesUser_%1$s_Pref</string>
    <string name="server_shared_preference">CyclopesServerPref</string>
    <string name="server_name_preference">server_name_preference</string>
    <string name="server_address_preference">server_address_preference</string>
    <string name="client_id_preference">client_id_preference</string>
    <string name="api_secret_preference">client_secret_preference</string>
    <string name="sorting_shared_preference">sorting_devices_preference</string>
    <string name="charts_preference">selectedCharts</string>
    <string name="folder_preference">pinnedFolderPreferenceKey</string>
    <string name="unknown_label">Unknown</string>
    <string name="add_filter_label">Add a filter…</string>
    <string name="add_new_user_label">Add new user</string>
    <string name="add_instance_label">Add instance</string>
    <string name="add_server_label">Add server</string>
    <string name="xml_file_read">Server added from XML file!</string>
    <string name="empty_device_list_label">:(\nCouldn\'t find devices</string>
    <string name="no_data_chart_label">Data could not be displayed</string>
    <string name="last_dev_sync_pref">last_device_sync</string>
    <string name="last_user_sync_pref">last_user_sync</string>
    <string name="last_server_sync_pref">last_server_sync</string>
    <string name="property_2_label">Second property</string>
    <string name="property_1_label">First property</string>
    <string name="dashboard_recycler_empty_view_label">Click the + button to create new charts</string>
    <string name="server_name_hint">Instance name</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="server_settings_label">Server settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message
        history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value"/>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="server_version_preference">server_version_preference</string>
    <string name="server_build_preference">server_build_preference</string>
    <string name="user_logo_preference">user_logo_preference</string>
    <string name="add_new_server_label">Add new Instance</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_boot_preference">first_boot</string>
    <string name="delete_label">Delete</string>
</resources>