<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orderingFromXml="true">
    <EditTextPreference
        android:id="@+id/instance_name_pref_view"
        android:dialogTitle="@string/server_name_hint"
        android:key="Name"
        android:title="@string/server_name_hint"/>
    <EditTextPreference
        android:id="@+id/instance_address_pref_view"
        android:dialogTitle="@string/server_address_hint"
        android:key="Address"
        android:title="@string/server_address_hint"/>
    <EditTextPreference
        android:id="@+id/instance_client_id_pref_view"
        android:dialogTitle="@string/client_id_hint"
        android:key="ClientId"
        android:title="@string/client_id_hint"/>
    <EditTextPreference
        android:id="@+id/instance_client_secret_pref_view"
        android:dialogTitle="@string/api_secret_hint"
        android:key="ClientSecret"
        android:title="@string/api_secret_hint"/>
</PreferenceScreen>