<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/debug_refresh_token"
        android:title="@string/refresh_token"
        android:orderInCategory="1"/>

    <item
        android:id="@+id/main_activity_search_button"
        android:icon="@drawable/ic_search"
        android:title="@string/search_label"
        app:showAsAction="collapseActionView|ifRoom"
        android:orderInCategory="1"
        app:actionViewClass="android.support.v7.widget.SearchView"/>

    <item
        android:id="@+id/main_activity_settings_action"
        android:title="@string/action_settings"
        app:showAsAction="never"
        android:orderInCategory="100" />
</menu>