<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
    <group
        android:id="@+id/nav_drawer_general_settings_group"
        android:orderInCategory="100">
        <item
            android:id="@+id/drawer_logout"
            android:icon="@drawable/ic_logout"
            android:orderInCategory="2"
            android:title="@string/logout_label"/>
        <item
            android:id="@+id/drawer_settings"
            android:icon="@drawable/ic_settings"
            android:orderInCategory="1"
            android:title="@string/action_settings"/>
    </group>

    <group
        android:id="@+id/nav_drawer_server_list_group"
        android:orderInCategory="100"
        android:visible="false">
        <item
            android:id="@+id/nav_drawer_add_server"
            android:icon="@drawable/ic_add"
            android:orderInCategory="100"
            android:title="@string/add_new_server_label"/>
    </group>
</menu>