<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_horizontal_margin">

    <FrameLayout
        android:id="@+id/login_activity_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout="@layout/fragment_add_server"/>

    <TextView
        android:id="@+id/add_user_button"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:gravity="center_vertical"
        android:text="@string/add_new_user_label"
        android:textAppearance="?android:textAppearanceButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_activity_container"
        app:layout_constraintVertical_bias="1.0"
        android:onClick="changeSection"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logIn_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/add_user_button"
        app:layout_constraintStart_toEndOf="@id/add_server_button"/>

    <TextView
        android:id="@+id/add_server_button"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_gravity="bottom|start"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/ic_arrow_left"
        android:gravity="center_vertical"
        android:text="@string/add_server_label"
        android:textAppearance="?android:textAppearanceButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_activity_container"
        app:layout_constraintVertical_bias="1.0"
        android:onClick="changeSection"/>
</android.support.constraint.ConstraintLayout>
