<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/device_details_info_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:minHeight="150dp"
        android:transitionName="details_card_transition"
        app:cardBackgroundColor="@android:color/white"
        app:contentPadding="8dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/device_info_view_label"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                app:layout_columnSpan="2"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/device_info_grid_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:stretchMode="columnWidth"
                app:layoutManager="GridLayoutManager"
                app:spanCount="2" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_margin="8dp"
                android:background="@color/colorPrimary"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/more_label"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Button"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/device_details_profiles_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:minHeight="150dp"
        android:transitionName="profiles_card_transition"
        app:cardBackgroundColor="@android:color/white"
        app:contentPadding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.GridLayout
                android:id="@+id/device_details_profiles_grid_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:longClickable="false"
                app:columnCount="2"
                app:contentPadding="8dp"
                app:rowCount="1"
                app:useDefaultMargins="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/details_profiles_view_label"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                    app:layout_columnSpan="2"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:maxLength="20"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                    app:layout_columnWeight="1"
                    app:layout_gravity="fill"
                    tools:text="Profile test 01"
                    />

                <TextView
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                    app:layout_columnSpan="1"
                    app:layout_columnWeight="1"
                    app:layout_gravity="fill"
                    app:layout_rowWeight="1"
                    tools:text="Pending Install"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:maxLength="20"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                    app:layout_columnWeight="1"
                    app:layout_gravity="fill"
                    tools:text="LockDown"
                    />

                <TextView
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                    app:layout_columnSpan="1"
                    app:layout_columnWeight="1"
                    app:layout_gravity="fill"
                    app:layout_rowWeight="1"
                    tools:text="Installed"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:maxLength="20"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                    app:layout_columnWeight="1"
                    app:layout_gravity="fill"
                    tools:text="Restrictions"
                    />

                <TextView
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                    app:layout_columnSpan="1"
                    app:layout_columnWeight="1"
                    app:layout_gravity="fill"
                    app:layout_rowWeight="1"
                    tools:text="Administratively removed"/>

            </android.support.v7.widget.GridLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_margin="8dp"
                android:background="@color/colorPrimary"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/more_label"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Button"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/device_details_apps_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:minHeight="150dp"
        android:transitionName="application_card_transition"
        app:cardBackgroundColor="@android:color/white"
        app:contentPadding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.GridLayout
                android:id="@+id/device_details_apps_grid_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:longClickable="false"
                app:columnCount="2"
                app:contentPadding="8dp"
                app:rowCount="1"
                app:useDefaultMargins="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/details_installed_apps_view_label"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                    app:layout_columnSpan="2"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:maxLength="20"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                    app:layout_columnWeight="1"
                    app:layout_gravity="fill"
                    tools:text="Facebook"
                    />

                <TextView
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                    app:layout_columnSpan="1"
                    app:layout_columnWeight="1"
                    app:layout_gravity="fill"
                    app:layout_rowWeight="1"
                    tools:text="Installed"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:maxLength="20"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                    app:layout_columnWeight="1"
                    app:layout_gravity="fill"
                    tools:text="MobiControl"
                    />

                <TextView
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                    app:layout_columnSpan="1"
                    app:layout_columnWeight="1"
                    app:layout_gravity="fill"
                    app:layout_rowWeight="1"
                    tools:text="Installed"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:maxLength="20"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                    app:layout_columnWeight="1"
                    app:layout_gravity="fill"
                    tools:text="YouTube"
                    />

                <TextView
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                    app:layout_columnSpan="1"
                    app:layout_columnWeight="1"
                    app:layout_gravity="fill"
                    app:layout_rowWeight="1"
                    tools:text="Uninstalled"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:maxLength="20"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                    app:layout_columnWeight="1"
                    app:layout_gravity="fill"
                    tools:text="YouTube"
                    />

                <TextView
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                    app:layout_columnSpan="1"
                    app:layout_columnWeight="1"
                    app:layout_gravity="fill"
                    app:layout_rowWeight="1"
                    tools:text="Uninstalled"/>

            </android.support.v7.widget.GridLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_margin="8dp"
                android:background="@color/colorPrimary"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/more_label"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Button"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
